[gd_scene load_steps=22 format=3 uid="uid://fy85yt8p8kgo"]

[ext_resource type="Script" path="res://Entities/hostile/Necromancer/Necromancer.gd" id="1_7kpsv"]
[ext_resource type="PackedScene" path="res://Entities/hostile/ally_detection_zone.tscn" id="1_ms7i0"]
[ext_resource type="PackedScene" uid="uid://nace8txxr12o" path="res://Entities/Stats/stats.tscn" id="2_b2qwn"]
[ext_resource type="PackedScene" uid="uid://dktufhxsvv1x1" path="res://Hit_Hurt_Boxes/hurt_box.tscn" id="3_rtb4m"]
[ext_resource type="PackedScene" uid="uid://c8fwx00fmg65p" path="res://Hit_Hurt_Boxes/hit_box.tscn" id="4_8667l"]
[ext_resource type="Texture2D" uid="uid://p350phjeione" path="res://Entities/hostile/Necromancer/MiniNecromancer.png" id="4_kf78t"]
[ext_resource type="PackedScene" uid="uid://dqr1ypao736lu" path="res://States/state_machine.tscn" id="5_legr3"]
[ext_resource type="Script" path="res://Entities/hostile/Necromancer/States/Fight.gd" id="8_4xyb3"]
[ext_resource type="Script" path="res://Entities/hostile/Necromancer/States/Move.gd" id="9_u4g7g"]
[ext_resource type="Script" path="res://Entities/hostile/Necromancer/States/Die.gd" id="10_nrv23"]
[ext_resource type="Script" path="res://Entities/hostile/Necromancer/States/Chase.gd" id="11_nx2qr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fapi3"]
radius = 2.0
height = 10.0

[sub_resource type="Animation" id="Animation_wgbhs"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_wniyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHitBox/CollisionShape2d:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qq2w7"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_i2o8t"]
resource_name = "Attack"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHitBox/CollisionShape2d:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_efiq1"]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"death_animation_finish"
}]
}

[sub_resource type="Animation" id="Animation_s78lu"]
resource_name = "Raise"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5l35k"]
_data = {
"Attack": SubResource("Animation_i2o8t"),
"Die": SubResource("Animation_efiq1"),
"Idle": SubResource("Animation_wgbhs"),
"RESET": SubResource("Animation_wniyl"),
"Raise": SubResource("Animation_s78lu"),
"Run": SubResource("Animation_qq2w7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gig3x"]
size = Vector2(13, 15.375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1bw8"]
size = Vector2(9, 14)

[node name="Necromancer" type="CharacterBody2D"]
z_index = 1
collision_layer = 8
script = ExtResource("1_7kpsv")
goal = null

[node name="AllyDetectionZone" parent="." instance=ExtResource("1_ms7i0")]

[node name="CollisionShape2d" parent="AllyDetectionZone" index="0"]
metadata/_edit_lock_ = true

[node name="Stats" parent="." instance=ExtResource("2_b2qwn")]
attack_speed = 1.0

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fapi3")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -11)
texture = ExtResource("4_kf78t")
hframes = 8
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5l35k")
}

[node name="HurtBox" parent="." instance=ExtResource("3_rtb4m")]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2d" parent="HurtBox" index="0"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_gig3x")

[node name="SwordHitBox" parent="." instance=ExtResource("4_8667l")]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2d" parent="SwordHitBox" index="0"]
position = Vector2(7, -2)
rotation = 1.5708
shape = SubResource("RectangleShape2D_b1bw8")
disabled = true

[node name="NavigationAgent2d" type="NavigationAgent2D" parent="."]

[node name="StateMachine" parent="." instance=ExtResource("5_legr3")]

[node name="Fight" type="Node" parent="StateMachine"]
script = ExtResource("8_4xyb3")

[node name="Timer" type="Timer" parent="StateMachine/Fight"]

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("9_u4g7g")

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource("10_nrv23")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("11_nx2qr")

[connection signal="die" from="Stats" to="." method="_on_stats_die"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="StateMachine/Fight/Timer" to="StateMachine/Fight" method="_on_timer_timeout"]

[editable path="AllyDetectionZone"]
[editable path="HurtBox"]
[editable path="SwordHitBox"]
